# Autonomous_driving

Embedded ESP32/: CMakeLists.txt  Makefile
Embedded ESP32/main/: CMakeLists.txt  Device.h  main.c  mutex.c  spiffs_vfs.c  struct.h  tft.c  tftspi.c  tftspi.h
Embedded STM M4/: .cproject  .mxproject  .project  CMakeLists.txt  STM32M4 Debug.launch  STM32M4.ioc
Embedded STM M4/Core/Inc/: Device.h  SCI.h  VFD.h  main.h  menu.h  menu_setting.h  motor.h  run.h  sensor.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  struct.h  variable.h
Embedded STM M4/Core/Src/: SCI.c  VFD.c  main.c  menu.c  menu_setting.c  motor.c  run.c  sensor.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  sysmem.c  variable.c
Embedded STM M4/Debug/: STM32M4.elf  STM32M4.list  STM32M4.map  makefile  objects.list
Embedded STM M4/Debug/Core/Src/: SCI.d  SCI.su  VFD.d  VFD.su  main.d  main.su  menu.d  menu.su  menu_setting.d  menu_setting.su  motor.d  motor.su  run.d  run.su  sensor.d  sensor.su  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk
Spring Server/: pom.xml
Spring Server/src/main/java/com/example/spring_test1/: SpringTest1Application.java
Spring Server/src/main/java/com/example/spring_test1/WEBSOCKET/: test1.java
Spring Server/src/test/java/com/example/spring_test1/: SpringTest1ApplicationTests.java
