idf_component_register(SRCS "comic24.c" "def_small.c" "DefaultFont.c" "DejaVuSans18.c" "DejaVuSans24.c" "esp_spiffs.c" "espiffs_cache.c" "list.c" 
                            "main.c" "minya24.c" "mutex.c" "SmallFont.c" "spi_master_lobo.c" "spiffs_cache.c" "spiffs_check.c" "spiffs_gc.c" 
                            "spiffs_hydrogen.c" "spiffs_nucleus.c" "spiffs_vfs.c" "tftspi.c" "tft.c" "tooney32.c" "Ubuntu16.c"
                    INCLUDE_DIRS ".")
